Update UI, handle new room

--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -31,6 +31,7 @@
         color: #fff;
         box-shadow: 0px 5px 0px #2b1a9f inset;
         box-sizing: border-box;
+        outline: none;
       }
     }
 
