[feat] Add fetching user info, joining same group

--- a/src/components/Chat/chat.module.scss
+++ b/src/components/Chat/chat.module.scss
@@ -20,5 +20,10 @@
   .otherChatFrom {
     font-size: 14px;
     color: rgb(160, 160, 160);
+    cursor: pointer;
+  }
+
+  .userInfo {
+    color: black;
   }
 }
