--- a/src/components/Chatting/chatting.module.scss
+++ b/src/components/Chatting/chatting.module.scss
@@ -2,6 +2,11 @@
   padding-right: 2em;
 }
 
+.chattingTop {
+  display: flex;
+  justify-content: space-between;
+}
+
 .topDesc {
   display: flex;
   padding-bottom: 2em;
@@ -12,13 +17,18 @@
   }
 
   button {
-    padding: 0.3em 0.7em;
-    margin-right: 1em;
+    padding: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     background-color: #6c2e8b;
     color: white;
     border-radius: 0.7em;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 10px;
     cursor: pointer;
+  }
+
+  .leaveButton {
+    margin-right: 1em;
   }
 }
 
@@ -44,5 +54,34 @@
 
   button {
     flex: 1;
+  }
+}
+
+.editRoomModal {
+  padding: 2em;
+
+  .row {
+    margin-bottom: 1em;
+    display: flex;
+
+    label {
+      flex: 1;
+      margin-right: 1em;
+    }
+
+    input {
+      flex: 3;
+    }
+  }
+
+  button {
+    margin-top: 2em;
+    float: right;
+    padding: 0.7em;
+    background-color: #6c2e8b;
+    color: white;
+    border-radius: 0.7em;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 10px;
+    cursor: pointer;
   }
 }
