--- a/src/components/Container/container.module.scss
+++ b/src/components/Container/container.module.scss
@@ -1,7 +1,7 @@
 .container {
   background-image: url('../../assets/bg.png');
-  min-height: 85vh;
-  padding: 4em 6em;
+  min-height: 90vh;
+  padding: 2em;
 }
 
 .signout {
@@ -19,7 +19,7 @@
   background-color: white;
   width: 100%;
   margin: auto;
-  height: 70vh;
+  height: 80vh;
   border-radius: 1.5em;
   display: flex;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
