--- a/src/components/RoomList/roomlist.module.scss
+++ b/src/components/RoomList/roomlist.module.scss
@@ -37,3 +37,26 @@
     cursor: pointer;
   }
 }
+
+.reenterButton {
+  background-color: rgba(36, 36, 36, 0.911);
+  color: white;
+  position: fixed;
+  top: 45%;
+  right: -10px;
+  width: 65px;
+  height: 150px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  cursor: pointer;
+  transition: right ease 0.3s;
+
+  span {
+    display: inline-block;
+    transform: rotate(90deg);
+  }
+
+  &:hover {
+    right: 0;
+  }
+}
